[tool.poetry]
name = "flask-poke-around"
version = "0.1.0"
description = ""
authors = ["Jonathan Chow <jonathan@cychow.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-wtf = "^0.14.3"
flask-sqlalchemy = "^2.4.4"
flask-migrate = "^2.5.3"
flask-login = "^0.5.0"
email-validator = "^1.1.1"
flask-mail = "^0.9.1"
pyjwt = "^1.7.1"
flask-bootstrap = "^3.3.7"
httpie = "^2.2.0"
flask-httpauth = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
